+added save as pdf feature +added saved pdf display (dashboard)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,19 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Theme.ScanAway">
-        <activity android:name=".FilterActivity">
+        <activity android:name=".FilterActivity" android:label="Filter"/>
+        <activity android:name=".CropActivity" android:label="Crop"/>
+        <activity android:name=".ScanActivity" android:label="Scan">
+
+        </activity>
+        <activity android:name=".Welcome" />
+        <activity android:name=".MainActivity" android:label="Dashboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CropActivity" />
-        <activity android:name=".ScanActivity">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
-        <activity android:name=".Welcome" />
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
