+added splash screen +choose from gallery

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Theme.ScanAway">
-        <activity android:name=".ViewPdf"></activity>
+        <activity android:name=".PagingActivity" android:label="Page Arrangement"></activity>
+        <activity android:name=".ViewPdf" />
         <activity
             android:name=".FilterActivity"
             android:label="Filter" />
@@ -24,13 +25,12 @@
             android:label="Crop" />
         <activity
             android:name=".ScanActivity"
-            android:label="Scan"></activity>
+            android:label="Scan" />
         <activity android:name=".Welcome" />
         <activity
             android:name=".MainActivity"
             android:label="Dashboard"
-            android:theme="@style/ScanAwaySplash"
-            >
+            android:theme="@style/ScanAwaySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
