--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    def cameraxVersion = "1.0.0-alpha02"
-    implementation "androidx.camera:camera-core:${cameraxVersion}"
-    implementation "androidx.camera:camera-camera2:${cameraxVersion}"
+    def camerax_version = "1.0.0"
+// CameraX core library using camera2 implementation
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+// CameraX Lifecycle Library
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+// CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha24"
     implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
     implementation 'com.github.marcinmoskala:ArcSeekBar:0.31'
