--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.2.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.nhaarman.supertooltips:library:3.0.+'
 
 
     implementation project(path: ':openCV4')
