--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/Theme.ScanAway">
+        android:theme="@style/Theme.ScanAway2">
         <activity
             android:name=".PagingActivity"
             android:label="Page Arrangement" />
